# POShub-api

./: .pre-commit-config.yaml  README-chapter5-deployment.md  README.md  build_layer_simple.py  pyproject.toml  sam-api.yml  sam-min.yml  samconfig.toml  template.yaml  validate_integration.py
.aws-sam/: build.toml
.github/workflows/: ci.yaml
fastapi-0.115.14.dist-info/: RECORD
fastapi-0.116.0.dist-info/: RECORD
httpx-0.28.1.dist-info/: RECORD
jmespath-1.0.1.dist-info/: RECORD
python_dependencies/: requirements.txt
python_dotenv-1.1.1.dist-info/: RECORD
rest-api/: README.md  event.json  sam-api-backup.yml  sam-api.yml  sam-min-external.yml
rest-api/.aws-sam/: build.toml
rest-api/config/: samconfig.toml
rest-api/events/: sqs-event-create_order.json  sqs-event-negative-amount.json
rest-api/fastapi-0.116.0.dist-info/: RECORD
rest-api/handlers/: __init__.py  jwt_authorizer.py
rsa-4.9.1.dist-info/: RECORD
scripts/: build_lambda_layer.py  build_layer_simple.py  deploy_manual.py  export_openapi.py  restore_credentials.sh  validate_integration.py
src/poshub_api/: http_client.py  http_utils.py  jwt_authorizer.py  logging_config.py  main.py  middleware.py  orders_main.py
src/poshub_api/demo/: exceptions.py  router.py  service.py
src/poshub_api/new_order_lambda/: lambda_function.py  send_test_order.py
tests/: __init__.py  test_api_integration.py  test_async_services.py  test_correlation_id.py  test_health.py
uvicorn-0.35.0.dist-info/: RECORD
watchfiles-1.1.0.dist-info/: RECORD
websockets-15.0.1.dist-info/: RECORD
(+6 files in other folders)
